Corrected Images links

--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,7 @@ Methods are the following, the names are self-explanatory:</p>
 
 <p>Here's the directory structure of the project</p>
 
-<p><img src="/img/soap/01-DirStruct.png" alt="Directory Structure"></p>
+<p><img src="img/soap/01-DirStruct.png" alt="Directory Structure"></p>
 
 <p><a name="example_handler_client"></a></p>
 
@@ -1552,7 +1552,7 @@ It intercepts the <code>getBooksNumberPerAuthorResponse</code> (that returns a M
 <a name="bookstorews-client-project-organization" class="anchor" href="#bookstorews-client-project-organization"><span class="octicon octicon-link"></span></a>BookstoreWS Client Project Organization</h3>
 
 <p>Here's the directory structure of the project
-<img src="/img/soap/02-ClientDirStruct.png" alt="Client Directory Structure"></p>
+<img src="img/soap/02-ClientDirStruct.png" alt="Client Directory Structure"></p>
 
 <p><a name="example_handler_sources"></a></p>
 
