Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ $price &gt;= 2;
 
 <p>Example:</p>
 
-<pre><code>// a simple expression using sum, multiplication and modulo
+<pre lang="XProc"><code>// a simple expression using sum, multiplication and modulo
 (1 + 1) * 1 % 1 == 0;
 </code></pre>
 
