Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -795,9 +795,9 @@ $price &gt;= 2;
 
 <p>Example:</p>
 
-<pre lang="XProc"><code>// a simple expression using sum, multiplication and modulo
-(1 + 1) * 1 % 1 == 0;
-</code></pre>
+<div class="highlight highlight-XQuery"><pre><span class="p">//</span> <span class="nt">a</span> <span class="err">simp</span><span class="ow">le</span> <span class="nt">expression</span> <span class="err">using</span> <span class="err">sum</span><span class="p">,</span> <span class="nt">multiplication</span> <span class="ow">and</span> <span class="nf">modulo</span>
+<span class="p">(</span><span class="mi">1</span> <span class="o">+</span> <span class="mi">1</span><span class="p">)</span> <span class="o">*</span> <span class="mi">1</span> <span class="err">%</span> <span class="err">1</span> <span class="o">=</span><span class="err">=</span> <span class="mi">0</span><span class="p">;</span>
+</pre></div>
 
 <p><a name="grammar"></a></p>
 
