Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -744,42 +744,42 @@ $price &gt;= 2;
 </tr></thead>
 <tbody>
 <tr>
-<td align="center">forall</td>
+<td align="center"><code>forall</code></td>
 <td align="center">Boolean</td>
 <td align="left">True if, for every element, the conditions are respected</td>
 </tr>
 <tr>
-<td align="center">exists</td>
+<td align="center"><code>exists</code></td>
 <td align="center">Boolean</td>
 <td align="left">True if, for at least one element, the conditions are respected</td>
 </tr>
 <tr>
-<td align="center">numOf</td>
+<td align="center"><code>numOf</code></td>
 <td align="center">Double</td>
 <td align="left">the number of elements that respects the conditions</td>
 </tr>
 <tr>
-<td align="center">max</td>
+<td align="center"><code>max</code></td>
 <td align="center">Double</td>
 <td align="left">Returns the maximum element that respects the conditions</td>
 </tr>
 <tr>
-<td align="center">min</td>
+<td align="center"><code>min</code></td>
 <td align="center">Double</td>
 <td align="left">Returns the minimum element that respects the conditions</td>
 </tr>
 <tr>
-<td align="center">avg</td>
+<td align="center"><code>avg</code></td>
 <td align="center">Double</td>
 <td align="left">Returns the average of the elements that respects the conditions</td>
 </tr>
 <tr>
-<td align="center">sum</td>
+<td align="center"><code>sum</code></td>
 <td align="center">Double</td>
 <td align="left">Returns the sum of elements that respects the conditions</td>
 </tr>
 <tr>
-<td align="center">product</td>
+<td align="center"><code>product</code></td>
 <td align="center">Double</td>
 <td align="left">Returns the product of elements that respects the conditions</td>
 </tr>
@@ -795,9 +795,9 @@ $price &gt;= 2;
 
 <p>Example:</p>
 
-<div class="highlight highlight-XQuery"><pre><span class="p">//</span> <span class="nt">a</span> <span class="err">simp</span><span class="ow">le</span> <span class="nt">expression</span> <span class="err">using</span> <span class="err">sum</span><span class="p">,</span> <span class="nt">multiplication</span> <span class="ow">and</span> <span class="nf">modulo</span>
-<span class="p">(</span><span class="mi">1</span> <span class="o">+</span> <span class="mi">1</span><span class="p">)</span> <span class="o">*</span> <span class="mi">1</span> <span class="err">%</span> <span class="err">1</span> <span class="o">=</span><span class="err">=</span> <span class="mi">0</span><span class="p">;</span>
-</pre></div>
+<pre><code>// a simple expression using sum, multiplication and modulo
+(1 + 1) * 1 % 1 == 0;
+</code></pre>
 
 <p><a name="grammar"></a></p>
 
